--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -127,7 +127,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                  ">
                         <div style="display: flex; flex-direction: column">
                             <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
-                            <mat-checkbox #showIcon [(ngModel)]="showNeutralIcon">Add Neutral Button</mat-checkbox>
+                            <mat-checkbox *ngIf="!ranking"  #showIcon [(ngModel)]="showNeutralIcon">Add Neutral Button</mat-checkbox>
                             <mat-checkbox #changePreference (click)="changePreferenceScore()"
                                 [(ngModel)]="ranking">Preference
                                 Score</mat-checkbox>
