--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -422,7 +422,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <ng-container matColumnDef="nameCandidates">
                     <th mat-header-cell *matHeaderCellDef> Name Candidates</th>
                     <td mat-cell *matCellDef="let element"><input type="text" matInput
-                            [(ngModel)]="element.nameCandidates" [value]="element.nameCandidates"></td>
+                            [(ngModel)]="element.nameCandidates" ></td>
                 </ng-container>
                 <ng-container matColumnDef="rationale">
                     <th mat-header-cell *matHeaderCellDef> Rationales</th>
