--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -160,8 +160,8 @@
             aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
-        <button (click)="selectedIndex = i;editSingleTableCells = false; verifyCritera()" class="add-column"
-            matTooltip="Setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex && showEdit" mat-icon-button>
+        <button (click)="openWindow(i, false)"class="add-column"
+            matTooltip="Setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex " mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
         <button  (click)="toggleImageUploadBox()" class="add-column" matTooltip="uploadImages"
