--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -236,16 +236,16 @@
     <!-- Cards Test Name-->
     <mat-card class="example-card">
         <mat-card-header>
-            <mat-card-title>Test Names</mat-card-title>
+            <mat-card-title>Columns</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <div style="text-align: center;">
-                <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
+                <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE Columns</div>
                 <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
             </div>
             <div>
                 <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
-                    <mat-label>Copy & Paste TEST NAMES</mat-label>
+                    <mat-label>Copy & Paste Columns</mat-label>
                     <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""
                         (ngModelChange)="upLoadNamesAndRationales(testNamesInput, true); "></textarea>
                 </mat-form-field>
