--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,8 @@
 <div style="width: 100%;  width: 100vw;
-height: 100vh;">
+height: 100vh;
+display: flex;
+    align-items: center;
+    justify-content: center;">
 
     <div class="container-fluid login-container mat-elevation-z4">
         <mat-toolbar class="toolbar">{{projectname}}</mat-toolbar>
@@ -12,33 +15,32 @@ height: 100vh;">
 
                     <img class="logo" src="assets/img/bi-logo-with-tagline.svg">
 
-                    <div class="mat-subheading-1 secondary-text">Welcome to NameVote </div>
 
                     <form name="loginForm" [formGroup]="loginForm" novalidate class="open-close-container">
-                   
-                        <mat-form-field appearance="outline">
-                        <mat-label>Email</mat-label>
-                        <input matInput placeholder="Email" formControlName="email">
-                        <mat-error *ngIf="loginForm.get('email').hasError('required')">
-                            Email is required
-                        </mat-error>
-                        <mat-error *ngIf="!loginForm.get('email').hasError('required') &&
-                              loginForm.get('email').hasError('email')">
-                            Please enter a valid email address
-                        </mat-error>
-                    </mat-form-field>
 
-                    <mat-form-field appearance="outline">
-                        <mat-label>Name</mat-label>
-                        <input matInput type="name" placeholder="name" formControlName="name">
-                        <mat-error>
-                            name is required
-                        </mat-error>
-                    </mat-form-field>
-                    <button class="submit-button" mat-raised-button style="color: white;" color="primary"
-                    (click)="submitCredentials()">Sign In</button>
-                    <button class="submit-button" mat-raised-button style="color: white;" color="primary"
-                    (click)="signInMicrosoft()">Sign In with microsoft</button>
+                        <mat-form-field appearance="outline">
+                            <mat-label>Email</mat-label>
+                            <input matInput placeholder="Email" formControlName="email">
+                            <mat-error *ngIf="loginForm.get('email').hasError('required')">
+                                Email is required
+                            </mat-error>
+                            <mat-error *ngIf="!loginForm.get('email').hasError('required') &&
+                              loginForm.get('email').hasError('email')">
+                                Please enter a valid email address
+                            </mat-error>
+                        </mat-form-field>
+
+                        <mat-form-field appearance="outline">
+                            <mat-label>Name</mat-label>
+                            <input matInput type="name" placeholder="name" formControlName="name">
+                            <mat-error>
+                                name is required
+                            </mat-error>
+                        </mat-form-field>
+                        <button class="submit-button" mat-raised-button style="color: white;" color="primary"
+                            (click)="submitCredentials()">Sign In</button>
+                        <button class="submit-button" mat-raised-button style="color: white;" color="primary"
+                            (click)="signInMicrosoft()">Sign In with microsoft</button>
                         <mat-error *ngIf="false">
                             Username or password incorrect or not register
                         </mat-error>
