--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -51,8 +51,8 @@
 
       <div class="menu-container">
         <div class="menu-item-Dark directionProjectList"
-        [ngClass]="{'menu-item-Light': selectedMenuItem === 'dashboard', 'menu-item-Dark': selectedMenuItem !== 'dashboard'}"
-         (click)="navigateTo('dashboard')">
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'dashboard', 'menu-item-Dark': selectedMenuItem !== 'dashboard'}"
+          (click)="navigateTo('dashboard')">
           <i class="bi bi-list-task"></i> Project List
         </div>
         <div class="menu-item-Dark"
@@ -74,14 +74,24 @@
         <i class="bi bi-arrow-left-circle"></i>
         BACK
       </div> -->
-      <div class="menu-item-Dark directionProjectList"   [ngClass]="{'menu-item-Light': selectedMenuItem === 'templates', 'menu-item-Dark': selectedMenuItem !== 'templates'}"(click)="navigateTo('templates')">
-        <i class="bi bi-list-task"></i>Templates
-        <div class="video-container">
-          <button (click)="CREATION_VIDEO_PATH='assets/videos/templates.mp4' ; showCreationModalVideo=true; "
-            class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
-            aria-label="ranking">
-            <mat-icon style="font-size: 26px; color: white; margin-left: 55px; " class="full-icon">video_library</mat-icon>
-          </button>
+        <div class="menu-item-Dark directionProjectList"
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'templates', 'menu-item-Dark': selectedMenuItem !== 'templates'}"
+          (click)="navigateTo('templates')">
+          <i class="bi bi-list-task"></i>Templates
+          <div class="video-container">
+            <button (click)="CREATION_VIDEO_PATH='assets/videos/templates.mp4' ; showCreationModalVideo=true; "
+              class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
+              aria-label="ranking">
+              <mat-icon style="font-size: 26px; color: white; margin-left: 55px; "
+                class="full-icon">video_library</mat-icon>
+            </button>
+          </div>
+        </div>
+        <div
+        class="menu-item-Dark"
+        (click)="signOut()">
+        Sign out <div>
+     
         </div>
       </div>
       </div>
@@ -128,7 +138,7 @@
           Participants
           <div class="video-container" style="z-index: 1;">
             <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
-              cla ="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
+              cla="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
               aria-label="ranking">
               <mat-icon style="font-size: 26px; color: white; " class="full-icon">video_library</mat-icon>
             </button>
@@ -156,6 +166,14 @@
             </button>
           </div>
         </div>
+
+        <div
+        class="menu-item-Dark"
+          (click)="signOut()">
+          Sign out <div>
+         
+          </div>
+        </div>
         <!-- <div class="menu-item-Dark" style="justify-content: flex-start;">
         <i class="bi bi-box-arrow-right"></i> Sign out
       </div> -->
@@ -177,5 +195,5 @@
 </div>
 <div *ngIf="showErrorMessage">
   <app-survey-dialog (onConfirm)="showErrorMessage = false" (onCancel)="showErrorMessage = false"
-      [dialogText]="'You must submit a user to display the information'"></app-survey-dialog>
+    [dialogText]="'You must submit a user to display the information'"></app-survey-dialog>
 </div>
